--- a/index.html
+++ b/index.html
@@ -217,20 +217,16 @@
 					<div class="row">
 						<div class="col-lg-12">
 							<div class="talk my-2 pl-2">
-								<p align="justify"><span class="papertitle"><a href="" target="_blank"> BVQA: Connecting Language and Vision
-									Through Multimodal Attention for
-									Open-Ended Question Answering in
-									Bengali</a></span><br>
-								<!-- <div class="d-flex">
-									<span class="authors">
-										Gazi Jannatul Ferdous, <span class="thisauthor"><b>Khaleda Akhter Sathi</b></span>, Md.Azad Hossain, Mohammed Moshiul Hoque, M. Ali Akber Dewan
-									</span>
-									</div> -->
-									<div class="d-flex">
-									<span class="Journal">IEEE ACCESS 2024 | IEEE,Under Review </span><br>
-									</div>
-								</p>
-								</div>
+    <p align="justify">
+        <span class="papertitle">
+            <a href="https://ieeexplore.ieee.org/document/10878995" target="_blank">BVQA: Connecting Language and Vision Through Multimodal Attention for Open-Ended Question Answering in Bengali</a>
+        </span><br>
+        <div class="d-flex">
+            <span class="Journal">IEEE ACCESS  | Q1, IF:3.4</span><br>
+        </div>
+    </p>
+</div>
+
 							</div>
 						</div>
 					<!-- <div class="row">
