--- a/index.html
+++ b/index.html
@@ -214,21 +214,23 @@
 					<div>
 						<h4 class="theme lingtitle">Publications</h4>
 					</div>
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="talk my-2 pl-2">
-    <p align="justify">
-        <span class="papertitle">
-            <a href="https://ieeexplore.ieee.org/document/10878995" target="_blank">BVQA: Connecting Language and Vision Through Multimodal Attention for Open-Ended Question Answering in Bengali</a>
-        </span><br>
-        <div class="d-flex">
-            <span class="Journal">IEEE ACCESS  | Q1, IF:3.4</span><br>
+			<div class="row">
+    <div class="col-lg-12">
+        <div class="talk my-2 pl-2">
+            <p align="justify">
+                <span class="papertitle">
+                    <a href="https://ieeexplore.ieee.org/document/10878995" target="_blank">
+                        BVQA: Connecting Language and Vision Through Multimodal Attention for Open-Ended Question Answering in Bengali
+                    </a>
+                </span><br>
+                <div class="d-flex">
+                    <span class="highlighted-journal">IEEE Access, Q1, IF: 3.4</span><br>
+                </div>
+            </p>
         </div>
-    </p>
+    </div>
 </div>
 
-							</div>
-						</div>
 					<!-- <div class="row">
 						<div class="col-lg-12">
 							<div class="talk my-2 pl-2">
