--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
 
 							</p>
 						<p class="subpara lingtheme" align="justify">
-							<b>	&#128073Research Interests</b>: My primary research interest lies at the intersection of <span style="color: blue;">machine learning, </span> <span style="color: blue;">natural language processing,</span>  and <span style="color: blue;">computer vision.</span>
-							Throughout my academic journey, I have dedicated myself to mastering the complexities of natural language processing (NLP) and its applications.I specialize in resource and computational model development for multilingual NLP.
+							<b>	&#128073Research Interests</b>: My primary research interests lie at the intersection of <span style="color: blue;">machine learning</span>, <span style="color: blue;">natural language processing</span>, and <span style="color: blue;">computer vision</span>. Throughout my academic journey, I have focused on mastering the complexities of <span style="color: blue;">natural language processing (NLP)</span> and <span style="color: blue;">machine learning (ML)</span>, with a particular emphasis on their applications. My specialization lies in the development of resource-efficient and computational models for multilingual NLP and ML.
+
+
 							</p>
 						
 					</div>
