--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 	<div style="padding-top: 2px;" class="splash">	   
 					<div class="mainpara">
 						<p class="subpara" align="justify">
-							<b>&#128075Bio</b>:Hi,I'm Shalha.I completed my B.Sc in Electronics & Telecommunication Engineering (ETE) from <span style="color: blue;">Chittagong University of Engineering and Technology,(CUET)</span>, Bangladesh, in July 2024.I was a research assistant at AIMS Lab.
+							<b>&#128075Bio</b>:Hi,I'm Shalha.I completed my B.Sc in Electronics & Telecommunication Engineering (ETE) from <span style="color: blue;">Chittagong University of Engineering and Technology,(CUET)</span>, Bangladesh, in July 2024. I was a research assistant at AIMS Lab.
 
 							</p>
 						<p class="subpara lingtheme" align="justify">
-							<b>	&#128073Research Interests</b>: My primary research interests lie at the intersection of <span style="color: blue;">machine learning</span>, <span style="color: blue;">natural language processing</span>, and <span style="color: blue;">computer vision</span>. Throughout my academic journey, I have focused on mastering the complexities of <span style="color: blue;">natural language processing (NLP)</span> and <span style="color: blue;">machine learning (ML)</span>, with a particular emphasis on their applications. My specialization lies in the development of resource-efficient and computational models for multilingual NLP and ML.
+							<b>	&#128073Research Interests</b>: My primary research interests lie at the intersection of <span style="color: blue;">machine learning(ML)</span>, <span style="color: blue;">natural language processing(NLP)</span>, and <span style="color: blue;">computer vision</span>. Throughout my academic journey, I have focused on mastering the complexities of <span style="color: blue;">NLP</span> and <span style="color: blue;">ML</span>, with a particular emphasis on their applications. My specialization lies in the development of resource-efficient and computational models for multilingual NLP and ML.I am currently seeking PhD opportunities in the field of ML, NLP, and Computer Vision.
 
 
 							</p>
