--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 							</p>
 						<p class="subpara lingtheme" align="justify">
-							<b>	&#128073Research Interests</b>: My primary research interests lie at the intersection of <span style="color: blue;">machine learning(ML)</span>, <span style="color: blue;">natural language processing(NLP)</span>, and <span style="color: blue;">computer vision</span>. Throughout my academic journey, I have focused on mastering the complexities of <span style="color: blue;">NLP</span> and <span style="color: blue;">ML</span>, with a particular emphasis on their applications. My specialization lies in the development of resource-efficient and computational models for multilingual NLP and ML.I am currently seeking PhD opportunities in the field of ML, NLP, and Computer Vision.
+							<b>	&#128073Research Interests</b>: My primary research interests lie at the intersection of <span style="color: blue;">machine learning(ML)</span>, <span style="color: blue;">natural language processing(NLP)</span>, and <span style="color: blue;">computer vision</span>. Throughout my academic journey, I have focused on mastering the complexities of <span style="color: blue;">NLP</span> and <span style="color: blue;">ML</span>, with a particular emphasis on their applications. My specialization lies in the development of resource-efficient and computational models for multilingual NLP and ML.I am currently seeking PhD/Master's opportunities in the field of ML, NLP, and Computer Vision.
 
 
 							</p>
@@ -128,9 +128,9 @@
 							<div class="talk my-2 pl-2">
 								<p align="justify">
 									<span class="papertitle">
-										<a href="" target="_blank">
+										
 											Attention-Based Bengali Visual Question Answering: Enhancing Bengali Language Understanding of Multimodal AI Systems.
-										</a>
+										
 									</span><br>
 									<div class="d-flex">
 										<span class="description">
