--- a/index.html
+++ b/index.html
@@ -214,18 +214,21 @@
 					</div>
 			<div class="row">
     <div class="col-lg-12">
-        <div class="talk my-2 pl-2">
-            <p align="justify">
-                <span class="papertitle">
-                    <a href="https://ieeexplore.ieee.org/document/10878995" target="_blank">
-                        BVQA: Connecting Language and Vision Through Multimodal Attention for Open-Ended Question Answering in Bengali
-                    </a>
-                </span><br>
-                <div class="d-flex">
-                    <span class="highlighted-journal">IEEE Access, Q1, IF: 3.4</span><br>
-                </div>
-            </p>
+   <div class="talk my-2 pl-2">
+    <p align="justify">
+        <span class="papertitle">
+            <a href="https://ieeexplore.ieee.org/document/10878995" target="_blank">
+                BVQA: Connecting Language and Vision Through Multimodal Attention for Open-Ended Question Answering in Bengali
+            </a>
+        </span><br>
+        <div class="d-flex">
+            <span class="highlighted-journal" style="font-weight: bold; color: #FF5733; background-color: #F5F5F5; padding: 2px 5px; border-radius: 3px;">
+                IEEE Access, Q1, IF: 3.4
+            </span><br>
         </div>
+    </p>
+</div>
+
     </div>
 </div>
 
@@ -611,6 +614,9 @@ ics and nonlinear wave propagation.
 			font-size: 1rem;
 			color: #888;
 		}
+		.description {
+    font-weight: bold;
+}
 
 		.thisauthor {
 		/* color: #111; */
@@ -645,6 +651,14 @@ ics and nonlinear wave propagation.
 		.tag:hover {
 		color: #BD9E24;
 		}
+		.highlighted-journal {
+    font-weight: bold;
+    color: #FF5733;  /* You can customize the color */
+    background-color: #F5F5F5; /* Light gray background */
+    padding: 2px 5px;
+    border-radius: 3px;
+}
+
 
 		.comingsoon {
 		padding-right:2px;
