--- a/index.html
+++ b/index.html
@@ -481,6 +481,14 @@ ics and nonlinear wave propagation.
 		font-size: 2.4rem;
 		color: #000000;
 		}
+		.highlighted-journal {
+    font-weight: bold;
+    color: #FF5733;  
+    background-color: #F5F5F5;
+    padding: 2px 5px;
+    border-radius: 3px;
+}
+
 		.name {
 		font-size: 2.8rem;
 		color: #333;
