--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 	<div style="padding-top: 2px;" class="splash">	   
 					<div class="mainpara">
 						<p class="subpara" align="justify">
-							<b>&#128075Bio</b>:Hi,I'm Shalha.I completed my B.Sc in Electronics & Telecommunication Engineering (ETE) from <span style="color: blue;">Chittagong University of Engineering and Technology,(CUET)</span>, Bangladesh, in July 2024. I was a research assistant at AIMS Lab.
+							<b>&#128075Bio</b>:Hi,I'm Shalha.I completed my B.Sc in Electronics & Telecommunication Engineering (ETE) from <span style="color: blue;">Chittagong University of Engineering and Technology,(CUET)</span>, Bangladesh, in July 2024. I was a research assistant at the AIMS Lab. I am currently working as a Software Engineer at <a href="https://cloudly.io/" target="_blank">Cloudly.io</a>
+
 
 							</p>
 						<p class="subpara lingtheme" align="justify">
@@ -384,7 +385,17 @@ ics and nonlinear wave propagation.
 	
 	
 							</div>
-						</div>		
+						</div>	
+						
+
+				<div id="mydocs">
+  <h2>CV Preview</h2>
+  <iframe src="files/cv.pdf" width="100%" height="500px"></iframe>
+
+  <h2>Transcript Preview</h2>
+  <iframe src="files/transcript.pdf" width="100%" height="500px"></iframe>
+</div>
+		
                  
 
 
