--- a/index.html
+++ b/index.html
@@ -388,13 +388,12 @@ ics and nonlinear wave propagation.
 						</div>	
 						
 
-				<div id="mydocs">
-  <h2>CV Preview</h2>
-  <iframe src="files/cv.pdf" width="100%" height="500px"></iframe>
-
-  <h2>Transcript Preview</h2>
-  <iframe src="files/transcript.pdf" width="100%" height="500px"></iframe>
+<div id="mydocs">
+  <h3>Documents</h3>
+  <a href="files/cv.pdf" target="_blank" class="doc-btn">📄 View CV</a>
+  <a href="files/transcript.pdf" target="_blank" class="doc-btn">📜 View Transcript</a>
 </div>
+
 		
                  
 
