--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ ics and nonlinear wave propagation.
 <div id="mydocs">
   <h3>Documents</h3>
   <a href="files/cv.pdf" target="_blank" class="doc-btn">📄 View CV</a>
-  <a href="files/transcript.pdf" target="_blank" class="doc-btn">📜 View Transcript</a>
+  <a href="https://drive.google.com/file/d/1RBXvpCe0r1Xay35_RZaNeLjNni02jDVH/view?usp=sharing" target="_blank" class="doc-btn">📜 View Transcript</a>
 </div>
 
 		
@@ -619,7 +619,31 @@ ics and nonlinear wave propagation.
 			color: #bbb;
 			font-family: 'Roboto', sans-serif;
 		}
+		
+ #mydocs {
+    background-color: #f0f0f0;
+    padding: 10px 20px;
+    border-radius: 10px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: start;
+    margin: 20px 0;
+  }
 
+  .doc-btn {
+    text-decoration: none;
+    background-color: #007bff;
+    color: white;
+    padding: 8px 14px;
+    border-radius: 6px;
+    font-size: 14px;
+    transition: background-color 0.2s ease-in-out;
+  }
+
+  .doc-btn:hover {
+    background-color: #0056b3;
+  }
 		.tagseparticle {
 			padding: 0px;
 			padding-left: 3px;
