--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ ics and nonlinear wave propagation.
 
 <div id="mydocs">
   <h3>Documents</h3>
-  <a href="files/cv.pdf" target="_blank" class="doc-btn">📄 View CV</a>
+  <a href="https://drive.google.com/file/d/1NV-YVMcRlXpqSBeEYxCOzrbXNQXt6wyD/view?usp=sharing" target="_blank" class="doc-btn">📄 View CV</a>
   <a href="https://drive.google.com/file/d/1RBXvpCe0r1Xay35_RZaNeLjNni02jDVH/view?usp=sharing" target="_blank" class="doc-btn">📜 View Transcript</a>
 </div>
 
